# parallel-func-sum

./: .gitignore  CMakeLists.txt  main.cpp  parallelFuncSum.h
